added authentication & directive

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,15 @@
-<button mat-flat-button color="primary" (click)="handleClick()">Log Out</button>
+<!-- <button pButton (click)="handleClick()">Log Out</button> -->
+
+<!-- <div class="container">
+    <img class="slide-image" src="assets/test1.jpeg"
+        [ngClass]="{'show': click_count === 0}" />
+    <img class="slide-image" src="assets/test2.jpeg"
+        [ngClass]="{'show': click_count === 1}" />
+
+    <div class="btn-wrapper">
+        <button mat-flat-button color="primary" style="position: absolute; right: 0px; top: 300px"
+            (click)="handleClickNext()">Next</button>
+        <button mat-flat-button color="warn" style="position: absolute; left: 0px; top: 300px" (click)="handleClickPrev()">Prev</button>
+    </div>
+</div> -->
+
