--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-
+<p-menubar [model]="items" *ngIf="mode === 1">
+    <button pButton label="Logout" icon="pi pi-power-off" (click)="handleLogOutClick()"></button>
+</p-menubar>
 
 <router-outlet></router-outlet>
