--- a/src/app/components/rxjs/rxjs.component.html
+++ b/src/app/components/rxjs/rxjs.component.html
@@ -4,6 +4,12 @@
             <mat-label>Input</mat-label>
             <input matInput [(ngModel)]="value">
         </mat-form-field>
+        <mat-form-field appearance="outline" style="margin: 40px 20px">
+            <mat-label>Choose a date</mat-label>
+            <input matInput [matDatepicker]="picker">
+            <mat-datepicker-toggle matSuffix [for]="picker" tabindex="-1"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
         <button mat-flat-button color="primary" type="submit" (click)="handleSaveClick()">
             Save
         </button>
@@ -38,7 +44,8 @@
             Subscribe BehaviorSubject
         </button>
 
-        <button mat-flat-button color="accent" type="submit" (click)="handleSubjectSubscribe()" style="margin-left: 30px">
+        <button mat-flat-button color="accent" type="submit" (click)="handleSubjectSubscribe()"
+            style="margin-left: 30px">
             Subscribe Subject
         </button>
     </div>
