--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,6 +14,7 @@
 </div> -->
 
 
-<div *ngFor="let item of (newClientList$ | async)?.data?.clientList">
+<!-- <div *ngFor="let item of (newClientList$ | async)?.data?.clientList">
 	{{ item.surname }}
-</div>
+</div> -->
+<h1>Home works</h1>
