--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form style="height: 100vh" [formGroup]="loginForm">
+<form style="height: 100vh" [formGroup]="loginForm" *ngIf="!login">
     <div fxLayoutAlign="center center" fxFill>
         <p-card fxFlex="30">
             <div>
