--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,7 @@
     <mat-menu #widgetMenu="matMenu">
       <button mat-menu-item name="carousel" (click)="onMenuClick($event)">Carousel</button>
       <button mat-menu-item name="scroll-bar" (click)="onMenuClick($event)">Scroll Bar</button>
+      <button mat-menu-item name="ag-grid" (click)="onMenuClick($event)">Ag Grid</button>
     </mat-menu>
   </div>
   <div class="right-menu">
